# fiduswriter

./: .ackrc  .atomignore  .babelrc  .coverage  .coveragerc  .dockerignore  .eslintignore  .eslintrc.js  .flake8  .gitignore  .jshintignore  .jshintrc  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.txt  TODO  application.py  biome.json  bk_configuration.py  build-deb.sh  build-rpm.sh  configuration.py  configuration.py-default  dev-requirements.txt  doc-requirements.txt  docker-compose.yml  docker-entrypoint.sh  draft.txt  es6-compile.sh  es6-transpile.sh  fiduswriter.sql.backup.REMOVED.git-id  fw.spec  index.html  (+16 more)
.github/: FUNDING.yml
.semaphore/: semaphore.yml
account/: admin.py  forms.py  models.py  signals.py  urls.py  util.py  views.py
apt/: fiduswriter.asc
base/: __init__.py  apps.py  context_processors.py  django_handler_mixin.py  html_email.py  package.json  proxy_views.py  views.py  ws_handler.py  ws_views.py
beta/: admin.py  models.py  urls.py  views.py
bibliography/: __init__.py  admin.py  bib.py  models.py  package.json  proxy_views.py  urls.py  views.py
book/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
browser_check/: package.json  urls.py  views.py
ci/: configuration.py  retry.bash
debian/: README  README.Debian  changelog  changelog.in  control  copyright  fiduswriter-server.install  fiduswriter-server.postinst  fiduswriter-server.postrm.debhelper  fiduswriter.default  fiduswriter.install  fiduswriter.logrotate  fiduswriter.postinst  fiduswriter.postinst.debhelper  fiduswriter.postrm  fiduswriter.postrm.debhelper  fiduswriter.prerm  fiduswriter.service  fiduswriter.service.override.example  fiduswriter.tmpfiles  nginx-example.conf  rules  watch
dev-scripts/: switch-local-deps.sh
docker/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  start-fiduswriter.sh
docs/: Makefile  QUICK_START.md  README.md  base.management.rst  base.rst  base.servers.rst  bibliography.management.commands.rst  code-of-conduct.md  conf.py  contributing.md  debian-packaging.md  django_sphinx.py  document.rst  e2ee.md  export-templates.md  faq.md  feedback.migrations.rst  feedback.rst  fiduswriter.rst  fixturemedia.management.commands.rst  index.md  index.rst  make.bat  making-screenshots.md  menu.rst  modules.rst  skip_modules.py  style.management.rst  style.rst  test.mock.rst  troubleshooting.md  user.migrations.rst  usermedia.rst  ws.rst
document/: __init__.py  admin.py  models.py  package.json  rdf.py  test_chrome.py  tests.py  urls.py  views.py  ws_views.py  ws_views_redis.py
feedback/: __init__.py  admin.py  models.py  urls.py  views.py
fiduswriter/: .babelrc  .coveragerc  .eslintignore  .eslintrc.js  .prettierignore  .prettierrc.json5  .stylelintrc  AGENTS.md  Dockerfile  __init__.py  asgi.py  base_doc_template.json  configuration-default.py  configuration.py-default  dev-requirements.txt  doc_template.hash  doc_template.json  docker-entrypoint.sh  local_settings.py-default  logging_filter.py  manage.py  mysql-requirements.txt  package.json  postgresql-requirements.txt  requirements.txt  settings.py  settings.py-default  stylelint.config.js  test-requirements.txt  urls.py  version.txt  wsgi.py
fixturemedia/: __init__.py
lint/: django_import_resolver.js
logs/: deb-job-logs.txt
menu/: __init__.py
npm_mjs/: package.json  signals.py
ojs/: admin.py  apps.py  middleware.py  models.py  proxy_views.py  token.py  urls.py  utils.py  views.py
prosemirror-gapcursor/: .gitignore  README.md  package.json
rpm/: fiduswriter-server.spec
snap/: snapcraft.yaml
style/: __init__.py  admin.py  models.py  urls.py  (+1 more)
(+2388 files in other folders)
