[build-system]
requires = ["setuptools>=65.6.3", "wheel", "babel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiduswriter"
description = "A semantic wordprocessor for academic purposes"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
  {email = "mail@lundinfo.com", name = "Lund Info AB"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Framework :: Django :: 4.1",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Editors :: Word Processors",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Utilities"
]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://www.fiduswriter.org"
repository = "https://www.github.com/fiduswriter/fiduswriter"

[project.optional-dependencies]
books = ["fiduswriter-books ~= 3.11.2"]
citation-api-import = ["fiduswriter-citation-api-import ~= 3.11.1"]
languagetool = ["fiduswriter-languagetool ~= 3.11.1"]
ojs = ["fiduswriter-ojs ~= 3.11.2"]
phplist = ["fiduswriter-phplist ~= 3.11.1"]
gitrepo-export = ["fiduswriter-gitrepo-export ~= 3.11.1"]
payment-paddle = ["fiduswriter-payment-paddle ~= 3.11.2"]
website = ["fiduswriter-website ~= 3.11.1"]
mysql = ["mysqlclient"]
postgresql = ["psycopg2"]

[project.scripts]
fiduswriter = "fiduswriter.manage:entry"

[tool.setuptools.dynamic]
version = {file = "fiduswriter/version.txt"}
dependencies = {file = "fiduswriter/requirements.txt"}
