[build-system]
requires = ["setuptools>=82.0.1", "babel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiduswriter"
description = "A semantic wordprocessor for academic purposes"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
  {email = "mail@lundinfo.com", name = "Lund Info AB"},
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Framework :: Django :: 6.0",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Editors :: Word Processors",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Utilities"
]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://www.fiduswriter.org"
repository = "https://www.github.com/fiduswriter/fiduswriter"

[project.optional-dependencies]
books = ["fiduswriter-books ~= 4.1.4"]
citation-api-import = ["fiduswriter-citation-api-import ~= 4.1.0"]
languagetool = ["fiduswriter-languagetool ~= 4.1.0"]
ojs = ["fiduswriter-ojs ~= 4.1.0"]
pandoc = ["fiduswriter-pandoc ~= 4.1.4"]
phplist = ["fiduswriter-phplist ~= 4.1.0"]
gitrepo-export = ["fiduswriter-gitrepo-export ~= 4.1.2"]
payment-paddle = ["fiduswriter-payment-paddle ~= 4.1.2"]
website = ["fiduswriter-website ~= 4.1.0"]
mysql = ["mysqlclient"]
postgresql = ["psycopg2"]
prosemirror-rust = ["prosemirror-rs"]
prosemirror-python = ["prosemirror"]
orjson = ["orjson"]


[project.scripts]
fiduswriter = "fiduswriter.manage:entry"

[tool.setuptools.dynamic]
version = {file = "fiduswriter/version.txt"}
dependencies = {file = "fiduswriter/requirements.txt"}
